--- a/f2fs-tools/PKGBUILD
+++ b/f2fs-tools/PKGBUILD
@@ -5,7 +5,7 @@
 pkgname=f2fs-tools
 _tag='d41dcbdf46dc3841cd0a0507e6573e38cb6c55bb' # git rev-parse v${pkgver}
 pkgver=1.14.0
-pkgrel=2
+pkgrel=3
 pkgdesc='Tools for Flash-Friendly File System (F2FS)'
 arch=(x86_64 powerpc64le powerpc)
 url='https://git.kernel.org/pub/scm/linux/kernel/git/jaegeuk/f2fs-tools.git/about/'
@@ -19,6 +19,9 @@ sha256sums=('SKIP')
 
 prepare() {
 	cd "${pkgname}"
+
+	# resize.f2fs: fix wrong ovp calculation
+	git cherry-pick -n f056fbeff08d30a6d9acdb9e06704461ceee3500
 
 	autoreconf -fi
 }
