--- a/modemmanager/PKGBUILD
+++ b/modemmanager/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgbase=modemmanager
 pkgname=(modemmanager libmm-glib)
-pkgver=1.16.10
+pkgver=1.18.2
 pkgrel=1
 pkgdesc="Mobile broadband modem management service"
 arch=(x86_64 powerpc64le powerpc)
@@ -12,9 +12,9 @@ url="https://www.freedesktop.org/wiki/Software/ModemManager/"
 license=(GPL2 LGPL2.1)
 depends=(systemd libgudev polkit ppp libqmi libmbim
          mobile-broadband-provider-info)
-makedepends=(gtk-doc gobject-introspection vala autoconf-archive git)
+makedepends=(gtk-doc gobject-introspection vala meson git bash-completion)
 checkdepends=(python-gobject python-dbus)
-_commit=2306e5b233205b40c1559c5c14e3f57308dfa2fe  # tags/1.16.10
+_commit=5a2c9229411fa6c5905b61e777122a9b49809134  # tags/1.18.2
 source=("git+https://gitlab.freedesktop.org/mobile-broadband/ModemManager.git#commit=$_commit")
 sha256sums=('SKIP')
 
@@ -25,50 +25,51 @@ pkgver() {
 
 prepare() {
   cd ModemManager
-  NOCONFIGURE=1 ./autogen.sh
 }
 
 build() {
-  cd ModemManager
-  ./configure \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --localstatedir=/var \
-    --sbindir=/usr/bin \
-    --with-dbus-sys-dir=/usr/share/dbus-1/system.d \
-    --with-udev-base-dir=/usr/lib/udev \
-    --with-polkit=permissive \
-    --with-systemd-journal \
-    --with-systemd-suspend-resume \
-    --enable-compile-warnings=yes \
-    --enable-gtk-doc \
-    --disable-static
+  local meson_args=(
+    -D dbus_policy_dir=/usr/share/dbus-1/system.d
+    -D polkit=permissive
+    -D dist_version="\"$pkgver-$pkgrel\""
+    -D vapi=true
+    -D gtk_doc=true
+  )
 
-  # https://bugzilla.gnome.org/show_bug.cgi?id=655517
-  sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
-
-  make
+  arch-meson ModemManager build "${meson_args[@]}"
+  meson compile -C build
 }
 
 check() {
-  cd ModemManager
-  make -k check
+  # Tests don't work yet
+  : meson test -C build --print-errorlogs
+}
+
+_pick() {
+  local p="$1" f d; shift
+  for f; do
+    d="$srcdir/$p/${f#$pkgdir/}"
+    mkdir -p "$(dirname "$d")"
+    mv "$f" "$d"
+    rmdir -p --ignore-fail-on-non-empty "$(dirname "$f")"
+  done
 }
 
 package_modemmanager() {
   depends+=(libmm-glib.so libg{lib,object,io,module}-2.0.so libsystemd.so libgudev-1.0.so
             libqmi-glib.so libmbim-glib.so)
   optdepends=('usb_modeswitch: install if your modem shows up as a storage drive')
-  options=(!emptydirs)
 
-  cd ModemManager
-  make DESTDIR="$pkgdir" install
-  make DESTDIR="$pkgdir" -C libmm-glib uninstall
-  make DESTDIR="$pkgdir" -C vapi uninstall
+  meson install -C build --destdir "$pkgdir"
 
-  # Some stuff to move is left over
-  mv "$pkgdir/usr/include" ..
-  mv "$pkgdir/usr/lib/pkgconfig" ..
+  cd "$pkgdir"
+  _pick libmm usr/include
+  _pick libmm usr/lib/girepository-1.0
+  _pick libmm usr/lib/libmm-glib.so*
+  _pick libmm usr/lib/pkgconfig
+  _pick libmm usr/share/gir-1.0
+  _pick libmm usr/share/gtk-doc/html/libmm-glib
+  _pick libmm usr/share/vala
 }
 
 package_libmm-glib() {
@@ -76,11 +77,7 @@ package_libmm-glib() {
   depends=(libg{lib,object,io}-2.0.so)
   provides=(libmm-glib.so)
 
-  install -d "$pkgdir/usr/lib"
-  mv include "$pkgdir/usr"
-  mv pkgconfig "$pkgdir/usr/lib"
-
-  cd ModemManager
-  make DESTDIR="$pkgdir" -C libmm-glib install
-  make DESTDIR="$pkgdir" -C vapi install
+  mv libmm/* "$pkgdir"
 }
+
+# vim:set sw=2 et:
