--- a/linux-lts/PKGBUILD
+++ b/linux-lts/PKGBUILD
@@ -1,11 +1,11 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
-
 pkgbase=linux-lts
-pkgver=5.10.23
+pkgver=5.10.70
 pkgrel=1
 pkgdesc='LTS Linux'
 url="https://www.kernel.org/"
-arch=('x86_64' 'powerpc64le')
+arch=(powerpc64le powerpc)
 license=(GPL2)
 makedepends=(
   bc kmod libelf pahole cpio perl tar xz
@@ -16,17 +16,27 @@ _srcname=linux-$pkgver
 source=(
   https://cdn.kernel.org/pub/linux/kernel/v${pkgver%%.*}.x/${_srcname}.tar.{xz,sign}
   config         # the main kernel config file
-  0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch
+  config.ppc32
+  amdgpu-dcn30-ppc64.patch
+  ppc-stack-traces-early-boot.patch
+  ppc-vas-on-4k.patch
+  ppc32-cpu-hotplug.patch
+  ppc64le-fix-static-keys.patch
 )
 validpgpkeys=(
   'ABAF11C65A2970B130ABE3C479BE3E4300411886'  # Linus Torvalds
   '647F28654894E3BD457199BE38DBBDC86092693E'  # Greg Kroah-Hartman
 )
 # https://www.kernel.org/pub/linux/kernel/v5.x/sha256sums.asc
-sha256sums=('f6e21c03ec6ff85b26d77c59fdab81e64707792a57593643307df192749edb6a'
+sha256sums=('75736c33711d7f298889ee4981b18774882045323e5c46af9ad3b022082db232'
             'SKIP'
             '87a62384d87b23192f3e565733420d48d925d68d4a57c460db876b628960d3e4'
-            '6992aed5d5398f9442f0ce94d5d5b6503bf492df0ebe719ed6e0fc1dc2ee1929')
+            'a99e1869b29abbcff5987515e53d2b76338fa68a8b79c5e8395923b7f207b1df'
+            '4cd851daa6c11d426bd42f3d29dbd6540437f30566381dae6663f4070b9b77c8'
+            '0ef28fe4f3810d579425f84b507aaae06c34ba921db25d78017f2ee5de06d22d'
+            'ae8f204127bb86ae202d50c3a01f524c24b194b1ea159fa51e2f07e1f94fead3'
+            'f12714da37052b0a8816c259a0d488c73da0dc21bb66cf271c2c8580785e6143'
+            'c262e8670e94fca76d63425ae614d6d87cce5c40ac7b01c25123208abf8e4867')
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
 export KBUILD_BUILD_TIMESTAMP="$(date -Ru${SOURCE_DATE_EPOCH:+d @$SOURCE_DATE_EPOCH})"
@@ -49,7 +59,10 @@ prepare() {
   done
 
   echo "Setting config..."
-  cp ../config .config
+  case "${CARCH}" in
+    powerpc64le) cp ../config .config ;;
+    powerpc)     cp ../config.ppc32 .config ;;
+  esac
   make olddefconfig
 
   make -s kernelrelease > version
@@ -195,4 +208,3 @@ for _p in "${pkgname[@]}"; do
 done
 
 # vim:set ts=8 sts=2 sw=2 et:
-
