--- a/kde/plasma-workspace/PKGBUILD
+++ b/kde/plasma-workspace/PKGBUILD
@@ -1,3 +1,4 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
@@ -5,8 +6,8 @@
 
 pkgbase=plasma-workspace
 pkgname=(plasma-workspace plasma-wayland-session)
-pkgver=5.22.4
-pkgrel=3
+pkgver=5.22.5
+pkgrel=2
 pkgdesc='KDE Plasma Workspace'
 arch=(x86_64 powerpc64le powerpc)
 url='https://kde.org/plasma-desktop/'
@@ -16,14 +17,20 @@ depends=(knotifyconfig ksystemstats ktexteditor libqalculate kde-cli-tools appst
          plasma-integration kpeople kactivities-stats libkscreen kquickcharts kuserfeedback kio-extras kio-fuse)
 makedepends=(extra-cmake-modules kdoctools gpsd baloo networkmanager-qt plasma-wayland-protocols kunitconversion kinit)
 groups=(plasma)
-source=(https://download.kde.org/stable/plasma/$pkgver/$pkgbase-$pkgver.tar.xz{,.sig} kde.pam)
-sha256sums=('af16b7151d87151a197b8fba41092f14895c0e64bfab05f562f831e18c6120ba'
+source=(https://download.kde.org/stable/plasma/$pkgver/$pkgbase-$pkgver.tar.xz{,.sig} kde.pam
+        https://invent.kde.org/plasma/plasma-workspace/-/commit/6379d1ec.patch)
+sha256sums=('f22e12dea303478d949f69b88fcf30787ef7f5d098be55595ec562aee4b13606'
             'SKIP'
-            '00090291204baabe9d6857d3b1419832376dd2e279087d718b64792691e86739')
+            '00090291204baabe9d6857d3b1419832376dd2e279087d718b64792691e86739'
+            '7436b6ff6c8f7e85aa37d8c2db4ba5937e1d200194f1e9ce88ee6815ea5e6fe0')
 validpgpkeys=('2D1D5B0588357787DE9EE225EC94D18F7F05997E'  # Jonathan Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+
+prepare() {
+  patch -d $pkgbase-$pkgver -p1 < 6379d1ec.patch # Fix power management inhibition
+}
 
 build() {
   cmake -B build -S $pkgbase-$pkgver \
