--- a/pipewire/PKGBUILD
+++ b/pipewire/PKGBUILD
@@ -6,20 +6,20 @@ pkgbase=pipewire
 pkgname=(pipewire alsa-card-profiles pipewire-docs pipewire-media-session
          pipewire-alsa pipewire-jack pipewire-pulse gst-plugin-pipewire
          pipewire-zeroconf)
-pkgver=0.3.35
+pkgver=0.3.38
 pkgrel=1
 epoch=1
 pkgdesc="Low-latency audio/video router and processor"
 url="https://pipewire.org"
 license=(MIT)
 arch=(x86_64 powerpc64le powerpc)
-makedepends=(git meson doxygen xmltoman valgrind libpulse alsa-lib libusb
+makedepends=(git meson doxygen graphviz python-docutils valgrind libpulse alsa-lib libusb
              gst-plugins-base rtkit dbus sdl2 ncurses libsndfile bluez-libs sbc
-             libfreeaptx libfdk-aac avahi webrtc-audio-processing python-docutils)
+             libfreeaptx libfdk-aac avahi webrtc-audio-processing)
 makedepends_powerpc64le=(libldac)
 makedepends_x86_64=(libldac)
 checkdepends=(desktop-file-utils)
-_commit=91069ec3d21c4c09f91f742cd1114806196e863e  # tags/0.3.35
+_commit=47a294c5bf52656998a7f43b13068c02001add77  # tags/0.3.38
 source=("git+https://gitlab.freedesktop.org/pipewire/pipewire.git#commit=$_commit")
 sha256sums=('SKIP')
 
