--- a/haveged/PKGBUILD
+++ b/haveged/PKGBUILD
@@ -5,7 +5,7 @@
 # Contributor: pootzko <pootzko at gmail dot com>
 
 pkgname=haveged
-pkgver=1.9.14
+pkgver=1.9.15
 pkgrel=1
 pkgdesc='Entropy harvesting daemon using CPU timings'
 arch=(x86_64 powerpc64le powerpc)
@@ -14,13 +14,12 @@ license=('GPL')
 depends=('glibc')
 validpgpkeys=('8F6B7293B03E5AC5762B65CE2E2F252B05CCA168') # Jirka Hladky <hladky.jiri@gmail.com>
 source=("$pkgname-$pkgver.tar.gz::https://github.com/jirka-h/$pkgname/archive/v$pkgver.tar.gz")
-        #"https://github.com/jirka-h/$pkgname/releases/download/$pkgver/$pkgname-$pkgver.tar.gz.asc"
-sha256sums=('938cb494bcad7e4f24e61eb50fab4aa0acbc3240c80f3ad5c6cf7e6e922618c3')
+sha256sums=('f882919ccead07ad6687a4784c0c501e617321e96dd0118403464969359cf6ad')
 
 prepare() {
   cd $pkgname-$pkgver
-  sed -i init.d/service.fedora \
-    -e 's/@SBIN_DIR@/\/usr\/bin/'
+
+  sed -i 's/@SBIN_DIR@/\/usr\/bin/' contrib/Fedora/haveged.service
 }
 
 build() {
@@ -43,5 +42,5 @@ package() {
 
   make DESTDIR="$pkgdir" install
 
-  install -D -m0644 init.d/service.fedora "$pkgdir"/usr/lib/systemd/system/haveged.service
+  install -D -m0644 contrib/Fedora/haveged.service "$pkgdir"/usr/lib/systemd/system/haveged.service
 }
