--- a/libsoup/PKGBUILD
+++ b/libsoup/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=libsoup
 pkgver=2.74.0
-pkgrel=1
+pkgrel=3
 pkgdesc="HTTP client/server library for GNOME"
 url="https://wiki.gnome.org/Projects/libsoup"
 arch=(x86_64 powerpc64le powerpc)
@@ -24,6 +24,7 @@ pkgver() {
 
 prepare() {
   cd $pkgname
+  git cherry-pick -n 80a7e4fb1cdfdb6f460e6fea076d8d5102b1d6e4
 }
 
 build() {
@@ -34,9 +35,7 @@ build() {
 }
 
 check() {
-  # SSL test flaky
-  # https://gitlab.gnome.org/GNOME/libsoup/-/issues/188
-  meson test -C build --print-errorlogs || :
+  meson test -C build --print-errorlogs
 }
 
 package() {
