--- a/mplayer/PKGBUILD
+++ b/mplayer/PKGBUILD
@@ -6,8 +6,8 @@
 
 pkgbase=mplayer
 pkgname=('mplayer' 'mencoder')
-pkgver=38157
-pkgrel=5
+pkgver=38322
+pkgrel=2
 pkgdesc='Media player for Linux'
 url='http://www.mplayerhq.hu/'
 arch=(x86_64 powerpc64le powerpc)
@@ -23,28 +23,27 @@ makedepends=('xorgproto' 'libxxf86vm' 'libmad' 'libxinerama' 'libmng' 'libxss'
              'libpng' 'libogg' 'libtheora' 'libbluray' 'libbluray.so'
              'xvidcore' 'libxvidcore.so' 'ncurses' 'libncursesw.so'
              'fontconfig' 'freetype2' 'libx11' 'libxext' 'libvdpau' 'libgl'
-             'lame' 'desktop-file-utils' 'ttf-font' 'openal' 'speex')
+             'lame' 'desktop-file-utils' 'ttf-font' 'openal' 'speex'
+             'libmpeg2')
+makedepends_x86_64=('yasm')
 options=('!emptydirs')
 source=(${pkgbase}-${pkgver}::"svn://svn.mplayerhq.hu/mplayer/trunk#revision=${pkgver}"
         mplayer.desktop
-        include-samba-4.0.patch
-        revert-icl-fixes.patch)
+        include-samba-4.0.patch)
 sha512sums=('SKIP'
             'd3c5cbf0035279c6f307e4e225473d7b77f9b56566537a26aa694e68446b9e3240333296da627ad5af83b04cc8f476d1a3f8c05e4cf81cd6e77153feb4ed74bc'
-            '9debb8c58b996f6c716c22c86c720bf9dc49b4ee9b76c57519f791667ae1de2cc6f5add878fbf4ac02c6b6fd1865e1bcfa6105e75de4bf7ec596c338ed0cae99'
-            '0cae0b26d3d97fd4c962962c43a481de20335369cbca406cadfc9bda1a0608b32f5374e76c477cb9a85bda83a568a1ed17126df224ae61579d0a402c1824aea8')
+            '9debb8c58b996f6c716c22c86c720bf9dc49b4ee9b76c57519f791667ae1de2cc6f5add878fbf4ac02c6b6fd1865e1bcfa6105e75de4bf7ec596c338ed0cae99')
 
 prepare() {
   cd ${pkgbase}-${pkgver}
   patch -p1 < "../include-samba-4.0.patch"
-  patch -p0 < "../revert-icl-fixes.patch"
-  # https://bugs.archlinux.org/task/62050
-  sed -E "s|(#include <samba-4.0/libsmbclient.h>)|#include <time.h>\n\1|g" -i stream/stream_smb.c
   ./version.sh
 }
 
 build() {
   cd ${pkgbase}-${pkgver}
+  export CFLAGS="${CFLAGS/-march=x86-64/}"
+  export CFLAGS="${CFLAGS/-mtune=generic/}"
   export LDFLAGS="${LDFLAGS/,O1/}"
   export LDFLAGS="${LDFLAGS/,--sort-common/}"
   ./configure --prefix=/usr \
@@ -67,6 +66,7 @@ build() {
     --confdir=/etc/mplayer \
     --extra-cflags="${CFLAGS} ${CPPFLAGS}" \
     --extra-ldflags="${LDFLAGS}"
+  [[ "${CARCH}" = "i686" ]] && sed 's|-march=i486|-march=i686|g' -i config.mak
   make
 }
 
@@ -83,7 +83,7 @@ package_mplayer() {
            'libpng' 'libpulse' 'libogg' 'fribidi' 'libtheora' 'libvorbis'
            'libvorbis.so' 'libbluray' 'libbluray.so' 'xvidcore'
            'libxvidcore.so' 'ncurses' 'libncursesw.so' 'fontconfig' 'freetype2'
-           'libxext' 'libvdpau' 'libgl' 'openal' 'speex')
+           'libxext' 'libvdpau' 'libgl' 'openal' 'speex' 'libmpeg2')
 
   cd ${pkgbase}-${pkgver}
   make DESTDIR="${pkgdir}" install-mplayer install-mplayer-man
@@ -102,7 +102,7 @@ package_mencoder() {
            'freetype2' 'fribidi' 'giflib' 'libgif.so' 'libvorbis'
            'libvorbis.so' 'libpng' 'libjpeg' 'libass' 'libass.so' 'lame'
            'libbluray' 'libbluray.so' 'libtheora' 'xvidcore' 'libxvidcore.so'
-           'openal' 'speex')
+           'openal' 'speex' 'libmpeg2')
 
   make -C ${pkgbase}-${pkgver} DESTDIR="${pkgdir}" install-mencoder install-mencoder-man
   find "${pkgdir}/usr/share/man" -name mplayer.1 -exec rename mplayer.1 mencoder.1 {} +
