--- a/firefox/PKGBUILD
+++ b/firefox/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=firefox
 pkgver=93.0
-pkgrel=1
+pkgrel=1.1
 pkgdesc="Standalone web browser from mozilla.org"
 arch=(x86_64 powerpc64le)
 license=(MPL GPL LGPL)
@@ -27,9 +27,10 @@ source=(https://archive.mozilla.org/pub/firefox/releases/$pkgver/source/firefox-
         big-endian-image-decoders.patch
         fix-image-format-warning.patch
         ppc32-fix-build.patch
+        ppc32-more.patch
         flac-no-ffvpx.patch
-        firefox-pgo.patch
-        avoid-redefinition.patch)
+        avoid-redefinition.patch
+        firefox-pgo.diff)
 sha256sums=('a78f080f5849bc284b84299f3540934a12e961a7ea368b592ae6576ea1f97102'
             'SKIP'
             'a9e5264257041c0b968425b5c97436ba48e8d294e1a0f02c59c35461ea245c33'
@@ -38,9 +39,10 @@ sha256sums=('a78f080f5849bc284b84299f3540934a12e961a7ea368b592ae6576ea1f97102'
             '0df637d44218524e213814d15d623f27724d8e405390173f6cc385e145110bfe'
             '958cf5016e9845b6ee6e2ed05ad96cc2fc6f74bebbb338a7b7ce29bffd2be716'
             'cc24b6b95ff11ebf3bb29e0270f357169c7fff00c2a6f33e6c2b701096e7da9e'
+            '7ca9c7be051c051391c54eeeb9e5ed6729edf7cfd5404e5e8851c7bae59ac2d0'
             '944fc690a0b344ea56ff2b0880ba492ba80338a68f31d0fb205b891a5de42cee'
-            'f75fef9272a9ea1badd8a4cbf0247d03b6bece8582772b508f3649840a56d573'
-            '3ebba6c6c59dbf754b522d2535c27eae3e724aab575b8e7be9658e0d33183bcf')
+            '3ebba6c6c59dbf754b522d2535c27eae3e724aab575b8e7be9658e0d33183bcf'
+            '6b18cb5ec5ae16881637a979c4e2696d4e036583093a08d0528e2e10c6d5a8e9')
 validpgpkeys=('14F26682D0916CDD81E37B6D61B7B526D98F0353') # Mozilla Software Releases <release@mozilla.com>
 
 # Google API keys (see http://www.chromium.org/developers/how-tos/api-keys)
@@ -66,8 +68,10 @@ prepare() {
   patch -Np0 -i ${srcdir}/big-endian-image-decoders.patch
   patch -Np0 -i ${srcdir}/fix-image-format-warning.patch
   patch -Np0 -i ${srcdir}/ppc32-fix-build.patch
+  patch -Np1 -i ${srcdir}/ppc32-more.patch
   patch -Np0 -i ${srcdir}/flac-no-ffvpx.patch
   patch -Np0 -i ${srcdir}/avoid-redefinition.patch
+  patch -Np1 -i ${srcdir}/firefox-pgo.diff
 
   case "${CARCH}" in
     powerpc64le)
