--- a/tzdata/PKGBUILD
+++ b/tzdata/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=tzdata
-pkgver=2021c
-_tzcode=2021c
-_tzdata=2021c
+pkgver=2021e
+_tzcode=2021e
+_tzdata=2021e
 pkgrel=1
 pkgdesc="Sources for time zone and daylight saving time data"
 arch=(x86_64 powerpc64le powerpc)
@@ -13,9 +13,9 @@ license=('custom: public domain')
 options=('!emptydirs')
 source=(https://www.iana.org/time-zones/repository/releases/tzcode${_tzcode}.tar.gz{,.asc}
         https://www.iana.org/time-zones/repository/releases/${pkgname}${_tzdata}.tar.gz{,.asc})
-sha512sums=('9ed7677744058c58656b47d77d464bad6ef503f2892b53c6abe694e68e73fa123dfc5c11bbcbbb7798f0a6bf1da72b81f8f1c63670839b967e15e58d6d36adad'
+sha512sums=('87b0335129ea41c5f42f687f548712e5da892baa8494cecf5d34851beceecf6ae52f22104696ed187713cf9e502570eb2041e277dfd3c043c11d0253bfde685a'
             'SKIP'
-            'e8de3a17c38f530b2ec39605699742dd32da5ee92ecf64accaaa5b012a1dac51d1f594adc52660602c3425016520346ab6ad614fa475eb310e17ccdcae93e6ca'
+            'c1e8d04e049157ed5d4af0868855bbd75517e3d7e1db9c41d5283ff260109de46b6fac6be94828201d093e163d868044ac2a9db2bf0aeab800e264d0c73a9119'
             'SKIP')
 validpgpkeys=('7E3792A9D8ACF7D633BC1588ED97E90E62AA7E34') # Paul Eggert <eggert@cs.ucla.edu>
 
