--- a/graphviz/PKGBUILD
+++ b/graphviz/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: John Proctor <jproctor@prium.net>
 
 pkgname=graphviz
-pkgver=2.49.1
+pkgver=2.49.3
 pkgrel=1
 pkgdesc='Graph visualization software'
 url='https://www.graphviz.org/'
@@ -25,7 +25,7 @@ optdepends=('mono: sharp bindings'
             'xterm: vimdot')
 source=("https://gitlab.com/graphviz/graphviz/-/archive/$pkgver/$pkgname-$pkgver.tar.gz"
         'ghostscript918.patch')
-sha256sums=('f62f644aa9b9c03cb14f0dc351a28525c055cd7951614c0b7efa6af66d4a8fb7'
+sha256sums=('5801664769ab88c2fb8ccb6ab0957cceabe6d4632b193041440e97790f53a9df'
             '0083d126e27f2223ec4226fc1d71c9c84106968a0fdf65de838aee1e4882bfdb')
 
 install=install
@@ -42,7 +42,7 @@ build() {
 	export CXXFLAGS+=' -fPIC -fpermissive'
 
 	./configure --prefix=/usr \
-           --enable-python3=yes --disable-python
+           --enable-python3=yes --disable-python --enable-lefty
         sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool # Fix overlinking
 	make
 }
