--- a/imagemagick/PKGBUILD
+++ b/imagemagick/PKGBUILD
@@ -4,20 +4,20 @@
 
 pkgbase=imagemagick
 pkgname=(imagemagick imagemagick-doc)
-pkgver=7.1.0.8
+pkgver=7.1.0.14
 pkgrel=1
 pkgdesc='An image viewing/manipulation program'
 url='https://www.imagemagick.org/'
 arch=(x86_64 powerpc64le powerpc)
 license=(custom)
-makedepends=(ghostscript openexr libwmf librsvg libxml2 openjpeg2 libraw opencl-headers libwebp libzip
+makedepends=(ghostscript openexr libwmf librsvg libxml2 openjpeg2 libraw opencl-headers libwebp libzip libjxl highway
              chrpath ocl-icd glu ghostpcl ghostxps libheif jbigkit lcms2 libxext liblqr libraqm libpng djvulibre)
 checkdepends=(gsfonts ttf-dejavu)
 _relname=ImageMagick-${pkgver%%.*}
 _tarname=ImageMagick-${pkgver%.*}-${pkgver##*.}
 source=(https://download.imagemagick.org/ImageMagick/download/releases/$_tarname.tar.xz{,.asc}
         arch-fonts.diff)
-sha256sums=('393280a93396cbb10f4a88e4dafaa03b0bc8031a86d92fb80948f814fc5d0c01'
+sha256sums=('8f08592b759eb8ff948814d4329fab2004042c5f4bd185315b066aca76f69f76'
             'SKIP'
             'a85b744c61b1b563743ecb7c7adad999d7ed9a8af816650e3ab9321b2b102e73')
 validpgpkeys=(D8272EF51DA223E4D05B466989AB63D48277377A)  # Lexie Parsimoniae
@@ -39,6 +39,7 @@ build() {
     --prefix=/usr \
     --sysconfdir=/etc \
     --enable-shared \
+    --disable-static \
     --with-dejavu-font-dir=/usr/share/fonts/TTF \
     --with-gs-font-dir=/usr/share/fonts/gsfonts \
     PSDelegate=/usr/bin/gs \
@@ -48,6 +49,7 @@ build() {
     --enable-opencl \
     --without-gslib \
     --with-djvu \
+    --with-jxl \
     --with-lqr \
     --with-modules \
     --with-openexr \
@@ -78,6 +80,7 @@ package_imagemagick() {
   depends=(libltdl lcms2 fontconfig libxext liblqr libraqm libpng libxml2)
   optdepends=('ghostscript: PS/PDF support'
               'libheif: HEIF support'
+              'libjxl: JPEG XL support'
               'libraw: DNG support'
               'librsvg: SVG support'
               'libwebp: WEBP support'
