--- a/mariadb/PKGBUILD
+++ b/mariadb/PKGBUILD
@@ -5,7 +5,7 @@
 pkgbase=mariadb
 pkgname=('mariadb-libs' 'mariadb-clients' 'mariadb' 'mytop')
 pkgdesc='Fast SQL database server, derived from MySQL'
-pkgver=10.6.4
+pkgver=10.6.5
 pkgrel=1
 arch=(x86_64 powerpc64le powerpc)
 license=('GPL')
@@ -19,12 +19,10 @@ validpgpkeys=('199369E5404BD5FC7D2FE43BCBCB082A1BB943DB') # MariaDB Package Sign
 # rsync source via https and hope it does not hurt them too much.
 # https://mariadb.com/kb/en/library/mirror-sites-for-mariadb/
 source=("https://rsync.osuosl.org/pub/mariadb/mariadb-${pkgver}/source/mariadb-${pkgver}.tar.gz"{,.asc}
-        '0001-arch-specific.patch'
-	'atomic-fix.patch')
-sha256sums=('75bf9b147a95d38160d01a73b098d50a1960563b46d16a235971fff64d99643c'
+	'0001-arch-specific.patch')
+sha256sums=('e0be040428d9a42a8bb4bd221b567ff2522cd6fa8906386273da4f03c5c20a8f'
             'SKIP'
-            '3289efb3452d199aec872115f35da3f1d6fd4ce774615076690e9bc8afae1460'
-            '4aa201a6c92ec377a10bc27fc6351f815d0de24416cbad878123d25f783c92d6')
+	    '3289efb3452d199aec872115f35da3f1d6fd4ce774615076690e9bc8afae1460')
 
 prepare() {
   cd $pkgbase-$pkgver/
@@ -35,7 +33,6 @@ prepare() {
   #  * make systemd-tmpfiles create MYSQL_DATADIR
   patch -Np1 < ../0001-arch-specific.patch
 
-  patch -Np0 < ../atomic-fix.patch
 }
 
 build() {
