--- a/ffmpeg/PKGBUILD
+++ b/ffmpeg/PKGBUILD
@@ -6,8 +6,8 @@
 # Contributor: Paul Mattal <paul@archlinux.org>
 
 pkgname=ffmpeg
-pkgver=4.4
-pkgrel=5.1
+pkgver=4.4.1
+pkgrel=1
 epoch=2
 pkgdesc='Complete solution to record, convert and stream audio and video'
 arch=(x86_64 powerpc64le powerpc)
@@ -92,7 +92,7 @@ provides=(
   libswresample.so
   libswscale.so
 )
-_tag=dc91b913b6260e85e1304c74ff7bb3c22a8c9fb1
+_tag=7e0d640edf6c3eee1816b105c2f7498c4f948e74
 source=(
   git+https://git.ffmpeg.org/ffmpeg.git#tag=${_tag}
   vmaf-model-path.patch
@@ -112,8 +112,7 @@ pkgver() {
 
 prepare() {
   cd ffmpeg
-
-  git cherry-pick -n 7c59e1b0f285cd7c7b35fcd71f49c5fd52cf9315 # fix build against libsrt 1.4.2
+  git cherry-pick -n 988f2e9eb063db7c1a678729f58aab6eba59a55b # fix nvenc on older gpus
   patch -Np1 -i "${srcdir}"/vmaf-model-path.patch
 }
 
