--- a/haveged/PKGBUILD
+++ b/haveged/PKGBUILD
@@ -5,21 +5,25 @@
 # Contributor: pootzko <pootzko at gmail dot com>
 
 pkgname=haveged
-pkgver=1.9.15
+pkgver=1.9.17
 pkgrel=1
 pkgdesc='Entropy harvesting daemon using CPU timings'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/jirka-h/haveged'
 license=('GPL')
 depends=('glibc')
 validpgpkeys=('8F6B7293B03E5AC5762B65CE2E2F252B05CCA168') # Jirka Hladky <hladky.jiri@gmail.com>
-source=("$pkgname-$pkgver.tar.gz::https://github.com/jirka-h/$pkgname/archive/v$pkgver.tar.gz")
-sha256sums=('f882919ccead07ad6687a4784c0c501e617321e96dd0118403464969359cf6ad')
+source=("$pkgname-$pkgver.tar.gz::https://github.com/jirka-h/$pkgname/archive/v$pkgver.tar.gz"
+        'initcpio-hook'
+        'initcpio-install')
+sha256sums=('02d9b7c801fbcf16bed43c27bf6ece570b79f4d94561f3eb30883fb5f89c526d'
+            'a59ff95d521a860031693d1e1d65d37ffba58412f0199b029bd340e2f7f52a0b'
+            'befb42d418d13c832da6d67f50417f6bca9a1c754dbdc63175f1e2546ea29b51')
 
 prepare() {
   cd $pkgname-$pkgver
 
-  sed -i 's/@SBIN_DIR@/\/usr\/bin/' contrib/Fedora/haveged.service
+  sed -i 's/@SBIN_DIR@/\/usr\/bin/' contrib/Fedora/haveged*.service
 }
 
 build() {
@@ -43,4 +47,7 @@ package() {
   make DESTDIR="$pkgdir" install
 
   install -D -m0644 contrib/Fedora/haveged.service "$pkgdir"/usr/lib/systemd/system/haveged.service
+  install -D -m0644 contrib/Fedora/haveged-once.service "$pkgdir"/usr/lib/systemd/system/haveged-once.service
+  install -D -m0644 "${srcdir}/initcpio-hook" "$pkgdir"/usr/lib/initcpio/hooks/haveged
+  install -D -m0644 "${srcdir}/initcpio-install" "$pkgdir"/usr/lib/initcpio/install/haveged
 }
