--- a/brotli/PKGBUILD
+++ b/brotli/PKGBUILD
@@ -9,12 +9,12 @@ pkgbase=brotli
 pkgname=('brotli' 'python-brotli' 'brotli-testdata')
 _gitcommit=e61745a6b7add50d380cfd7d3883dd6c62fc2c71
 pkgver=1.0.9
-pkgrel=4
+pkgrel=7
 pkgdesc='Generic-purpose lossless compression algorithm'
 url='https://github.com/google/brotli'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('MIT')
-#makedepends=('git' 'glibc' 'gcc-libs' 'cmake' 'python-setuptools')
+makedepends=('git' 'glibc' 'gcc-libs' 'cmake' 'python-setuptools')
 source=(${pkgname}::"git+${url}#commit=${_gitcommit}")
 sha512sums=('SKIP')
 
